# minesweeper

./: CMakeLists.txt  README.md  Toolchain-mingw.cmake  main.c
.github/workflows/: build-release-linux.yml  cmake-linux.yml  main.yml
src/: board.c  board.h  game.c  game.h  game_loop.c  init.c  log.c  log.h  main.c  resource.c  server.c  texture.c  texture.h  utils.c
